--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/LunchOrdersAustralia.loader.js";
+      var loaderUrl = buildUrl + "/lunch-orders-australia.loader.js";
       var config = {
-        dataUrl: buildUrl + "/LunchOrdersAustralia.data.unityweb",
-        frameworkUrl: buildUrl + "/LunchOrdersAustralia.framework.js.unityweb",
-        codeUrl: buildUrl + "/LunchOrdersAustralia.wasm.unityweb",
+        dataUrl: buildUrl + "/lunch-orders-australia.data.unityweb",
+        frameworkUrl: buildUrl + "/lunch-orders-australia.framework.js.unityweb",
+        codeUrl: buildUrl + "/lunch-orders-australia.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "The Super Challenge",
         productName: "Lunch Orders Australia",
